# solvers

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  Makefile
solvers/cg/: CMakeLists.txt  cg.hpp  test_cg.cpp
src/: CMakeLists.txt  linalg.hpp  mat.hpp  test_linalg.cpp  types.hpp  vec.hpp
src/complex/: CMakeLists.txt  complex.hpp
src/core/: CMakeLists.txt  concepts.hpp  core.hpp  types.hpp
src/linalg/: CMakeLists.txt  mat.hpp  vec.hpp
tests/: CMakeLists.txt
tests/solvers/cg/: CMakeLists.txt  test_cg.cpp
tests/src/linalg/: CMakeLists.txt  test_vec.cpp
